--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,10 @@
 @import "tailwindcss";
 
+:root {
+  --scrollbar-track-bg: #090b12;
+  --scrollbar-thumb-bg: linear-gradient(to bottom, rgb(0, 62, 196), rgb(184, 0, 153));
+}
+
 body {
   @apply m-0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -30,4 +35,18 @@ code {
 .text-stroke {
   -webkit-text-stroke: 0.5px;
   -webkit-text-stroke-color: var(--color-highlights);
+}
+
+/* Scrollbar styles */
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--scrollbar-track-bg);
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--scrollbar-thumb-bg);
+  border-radius: 10px;
 }
