--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 :root {
-  --scrollbar-track-bg: #090b12;
+  --scrollbar-track-bg: #020b2c;
   --scrollbar-thumb-bg: linear-gradient(to bottom, rgb(0, 62, 196), rgb(184, 0, 153));
 }
 
@@ -44,6 +44,7 @@ code {
 
 ::-webkit-scrollbar-track {
   background-color: var(--scrollbar-track-bg);
+  border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
